--- a/src/app/common/components/sidebar/header/header.component.html
+++ b/src/app/common/components/sidebar/header/header.component.html
@@ -4,7 +4,7 @@
     <a routerLink="/account">
       <span class="clear">
       <span class="block m-t-xs">
-        <strong class="font-bold">Urse Daniel (admin)</strong>
+        <strong class="font-bold">{{user.name}} ({{user.role}})</strong>
       </span>
       </span></a>
   </div>
