--- a/src/app/main/components/allprojects/allprojects.component.html
+++ b/src/app/main/components/allprojects/allprojects.component.html
@@ -12,7 +12,7 @@
                 <thead>
                 <tr>
                   <th colspan="11">
-                    Filtru dupa nume:
+                    Filtru dupa titlu:
                     <input #nameFilter class="form-control"/>
                   </th>
                 </tr>
