--- a/src/app/main/components/login/login.component.html
+++ b/src/app/main/components/login/login.component.html
@@ -5,15 +5,13 @@
     <h1 class="col-md-12 login-title">AUTENTIFICARE</h1>
 
     <div class="row login-content">
-        <div class="col-md-12 form-group">
-            <input type="text" class="form-control" placeholder="Nume utilizator">
+      <div class="row">
+        <div class="col-md-4 col-md-offset-4">
+          <button (click)="checkLogged()" class="btn btn-block btn-social btn-facebook">
+            <span class="fa fa-facebook"></span> Sign in with Facebook
+          </button>
         </div>
-        <div class="col-md-12 form-group">
-            <input type="password" class="form-control" placeholder="Parola utilizator">
-        </div>
-        <div class="col-md-12">
-            <button type="submit" class="btn btn-primary block full-width m-b" (click)="loggedIn()">Login</button>
-        </div>
+      </div>`
         <span class="m-t footer-text-white"> <small>Pentru probleme si suport utilizare, e-mail:</small> </span>
         <br/>
         <span class="m-t footer-text-black"> <small>support@acar.ro</small> </span>
@@ -23,4 +21,5 @@
         </p>
         <br/>
     </div>
+
 </div>
