--- a/src/app/main/components/teachers/teacherdetail/teacherinfo/teacherinfo.component.css
+++ b/src/app/main/components/teachers/teacherdetail/teacherinfo/teacherinfo.component.css
@@ -46,3 +46,37 @@
 .yellow-star:hover {
   transform: 0 !important;
 }
+
+.rating {
+  overflow: hidden;
+  display: inline-block;
+}
+
+.rating-input {
+  float: right;
+  width: 16px;
+  height: 16px;
+  padding: 0;
+  margin: 0 0 0 -16px;
+  opacity: 0;
+}
+
+.rating-star,
+.rating:hover .rating-star {
+  position: relative;
+  float: right;
+  display: block;
+  width: 16px;
+  height: 16px;
+  background: url('/assets/star.png') 0 -16px;
+}
+
+.rating-star:hover,
+.rating-star:hover ~ .rating-star,
+.rating-input:checked ~ .rating-star {
+  background-position: 0 0;
+}
+
+.btn-primary {
+  padding: 3px;
+}
