-adaugare functionalitate barfe pt profesor + orar

--- a/src/app/common/components/sidebar/sidebar.component.html
+++ b/src/app/common/components/sidebar/sidebar.component.html
@@ -25,6 +25,10 @@
             <a routerLink="/documents"><i class="fa fa-file-text"></i> <span
               class="nav-label">Documente</span></a>
           </li>
+          <li routerLinkActive="active">
+            <a routerLink="/schedule"><i class="fa fa-calendar"></i> <span
+              class="nav-label">Orar</span></a>
+          </li>
           <li routerLinkActive="active" (click)="logOut()">
             <a><i class="fa fa-sign-out"></i> <span
               class="nav-label">Iesire</span></a>
