--- a/src/app/main/components/teachers/teacherdetail/teacherdetail.component.html
+++ b/src/app/main/components/teachers/teacherdetail/teacherdetail.component.html
@@ -18,7 +18,7 @@
                 <acar-teacherinfo *ngIf="selectedTab.select == 1" [teacherId]="teacherSelected"></acar-teacherinfo>
               </div>
               <div class="col-lg-12">
-                <acar-teachergossips *ngIf="selectedTab.select == 2"></acar-teachergossips>
+                <acar-teachergossips *ngIf="selectedTab.select == 2" [teacherId]="teacherSelected"></acar-teachergossips>
               </div>
               <!--<div class="col-lg-12">-->
                 <!--<acar-projects *ngIf="selectedTab.select == 3" [courseId]="courseSelected"></acar-projects>-->
