--- a/src/app/main/components/teachers/teacherdetail/teachergossips/teachergossips.component.html
+++ b/src/app/main/components/teachers/teacherdetail/teachergossips/teachergossips.component.html
@@ -1,6 +1,6 @@
-<div class="row animated fadeInRight">
+<div class="row ">
   <div class="col-sm-8">
-    <button type="button" class="btn btn-primary" style="margin-top:20px;" (click)="modalMember.open()">
+    <button type="button" class="btn btn-primary" style="margin-top:20px;" (click)="modalGossip.open(teacherId)">
       Adauga o barfa
     </button>
   </div>
@@ -8,9 +8,10 @@
   <div class="col-md-8" *ngFor="let gossip of gossips">
     <span class="highlight">{{gossip.title}} <i class="fa fa-commenting"></i></span>
     <br/>
-    <span><strong>Data publicarii:</strong> {{gossip.date}}</span>
+    <span><strong>Data publicarii:</strong> {{gossip.posting_date}}</span>
     <hr>
     <span><strong>Continut:</strong> {{gossip.content}}</span>
     <hr>
   </div>
 </div>
+<acar-addteachergossip (pageChanged)="handleAdd($event)"></acar-addteachergossip>
